@@ -1,4 +1,8 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 28 Nov 2018 Released 2.2.1 version
+* Update translations from zanata (pl, uk updated)
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 21 Nov 2018 Released 2.2.0 version
 * Update translations from zanata (de updated)
 * Save some screen space in the setup tool
